<resources>
    <string name="app_name">TomatoPlayer</string>
    <string name="app_home">Home</string>
    <string name="app_source"></string>
    <string name="hm_ok">Load Complete</string>
    <string name="hm_notok">Load Fail</string>
    <string name="hm_retry">Retry</string>
    <string name="hm_cancel">Cancel</string>
    <string name="hm_exit">Press BACK again to EXIT</string>
    <string name="hm_exit_live">Press BACK again to exit LiveTV</string>
    <string name="hm_date1">dd MMM</string>
    <string name="hm_date2">EE HH:mm</string>
    <string name="hm_hist">History</string>
    <string name="hm_live">LiveTV</string>
    <string name="hm_search">Search</string>
    <string name="hm_push">Push</string>
    <string name="hm_file">Drives</string>
    <string name="hm_fav">Favorite</string>
    <string name="hm_setting">Menu</string>
    <string name="hm_style_line">Line View</string>
    <string name="hm_style_grid">Grid View</string>
    <string name="hm_hist_del">Removed from History</string>
    <string name="hm_cache_del">Cache Cleared</string>
    <string name="det_play">Play</string>
    <string name="det_expand">Expand</string>
    <string name="det_search">Search</string>
    <string name="det_sort">Sort</string>
    <string name="det_refresh">Refresh</string>
    <string name="det_push">Push</string>
    <string name="det_fav">Favorite</string>
    <string name="det_fav_add">Added to Favorite</string>
    <string name="det_fav_del">Removed from Favorite</string>
    <string name="det_fav_star">★ Favorite</string>
    <string name="det_fav_unstar">☆ Favorite</string>
    <string name="det_url">Play URL Copied</string>
    <string name="det_source"></string>
    <string name="det_year">Year</string>
    <string name="det_area">Area</string>
    <string name="det_lang">Language</string>
    <string name="det_type">Genre</string>
    <string name="det_actor">Cast</string>
    <string name="det_dir">Director</string>
    <string name="det_des"></string>
    <string name="det_desc">intro</string>
    <string name="mn_config">Configuration Address</string>
    <string name="mn_home">Source</string>
    <string name="mn_home_show">Show Source</string>
    <string name="mn_home_type">Type</string>
    <string name="mn_icon">Button</string>
    <string name="mn_history_num">History</string>
    <string name="mn_live_boot">Autostart Live</string>
    <string name="mn_wall_change">Wallpaper</string>
    <string name="mn_wall_load">Loading Wallpaper</string>
    <string name="mn_wall_reset">Reset</string>
    <string name="mn_play_type">Player</string>
    <string name="mn_play_decode">Decode</string>
    <string name="mn_search">Search Display</string>
    <string name="mn_ratio">Screen Ratio</string>
    <string name="mn_bgplay">Bgplay</string>
    <string name="mn_preview">Preview Window</string>
    <string name="mn_webview">WebView</string>
    <string name="mn_render">Render</string>
    <string name="mn_backup">Backup/Restore</string>
    <string name="mn_dns">DNS</string>
    <string name="mn_locale">Language</string>
    <string name="mn_theme">Theme</string>
    <string name="mn_about">About</string>
    <string name="mn_purify">Skip Ad</string>
    <string name="mn_ijk_cache_play">IJK Cache</string>
    <string name="mn_reset">resetApp</string>
    <string name="mn_fastsearch">FastSearch</string>
    <string name="dia_source">Select Source</string>
    <string name="dia_hm_type">Select Display Type</string>
    <string name="dia_hm_icon">Home Icon Placement</string>
    <string name="dia_history">Select History to Keep</string>
    <string name="dia_history_list">Configuration History List</string>
    <string name="dia_history_live">Live History List</string>
    <string name="dia_history_epg">EPG History List</string>
    <string name="dia_player">Select Player Type</string>
    <string name="dia_decode">Select IJK Decoder</string>
    <string name="dia_search">Select Search Mode</string>
    <string name="dia_ratio">Select Screen Ratio</string>
    <string name="dia_render">Select Render Mode</string>
    <string name="dia_bkres">Backup / Restore</string>
    <string name="dia_bkpkg">Select Backup Package</string>
    <string name="dia_dns">Select DNS</string>
    <string name="dia_locale">Select Language</string>
    <string name="dia_theme">Select Theme</string>
    <string name="dia_confirm">Confirm to Clear All ?</string>
    <string name="dia_reset">Reset Clear Configuration</string>
    <string name="dia_media_setting_title">Media Setting</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="bottom_storage_type">Select Storage</string>
    <string name="bottom_webdav">WebDAV</string>
    <string name="bottom_local">Local Storage</string>
    <string name="bottom_alist">Alist</string>
    <string name="webdav_namespace">NameSpace</string>
    <string name="webdav_address">WebDAV Address</string>
    <string name="webdav_path">WebDAV Path</string>
    <string name="webdav_username">UserName</string>
    <string name="webdav_password">Password</string>
    <string name="webdav_connect_error">Connect Error</string>
    <string name="alist_namespace">NameSpace</string>
    <string name="alist_address">Alist Address</string>
    <string name="alist_path">Alist Path</string>
    <string name="alist_username">UserName</string>
    <string name="alist_password">Password</string>
    <string name="alist_connect_error">Connect Error</string>
    <string name="driver_source_empty">No Source</string>
    <string name="driver_sort_title">Select Sort Type</string>
    <string name="driver_sort_type_name_asc">Ascending By Name</string>
    <string name="driver_sort_type_name_desc">Descending By Name</string>
    <string name="driver_sort_type_time_asc">Ascending By Date</string>
    <string name="driver_sort_type_time_desc">Descending By Date</string>
    <string name="driver_delete">Confirm Delete</string>
    <string name="driver_edit_operation">Edit</string>
    <string name="driver_delete_operation">Delete</string>
    <string name="driver_choose_operation">Select Operation</string>
    <string name="driver_local_refuse">No storage permission</string>
    <string name="driver_media_unsupported">Media Unsupported</string>
    <string name="driver_photo_link_notice">Notice</string>
    <string name="driver_photo_link_content">Extract link information from images</string>
    <string name="driver_photo_link_download">Download</string>
    <string name="driver_photo_link_copy">Copy</string>
    <string name="driver_photo_link_un_support">No Support Application</string>
    <string name="set_bkup_ok">Backup Success</string>
    <string name="set_bkup_del">Backup Deleted</string>
    <string name="set_bkup_fail">Backup Fail</string>
    <string name="set_bkup_fail_hk">Backup Fail (Hawk)</string>
    <string name="set_bkup_fail_db">Backup Fail (DB)</string>
    <string name="set_rest_ok">Restore Success, please Restart</string>
    <string name="set_rest_fail_hk">Restore Fail (Hawk)</string>
    <string name="set_rest_fail_db">Restore Fail (DB)</string>
    <string name="set_permission_ok">Write Permission Granted</string>
    <string name="set_permission_fail1">Failed to get Permission</string>
    <string name="set_permission_fail2">Failed to get Permission, please grant in Settings</string>
    <string name="act_app">Applications</string>
    <string name="act_app_sel">Select to Uninstall</string>
    <string name="act_app_rm">Uninstall</string>
    <string name="act_fav">Favorite</string>
    <string name="act_fav_sel">Select to Remove</string>
    <string name="act_fav_rm">Remove</string>
    <string name="act_drive">Drives</string>
    <string name="act_hist">History</string>
    <string name="act_hist_sel">Select to Remove</string>
    <string name="act_hist_rm">Remove</string>
    <string name="act_live_play_empty_live_url">The live url is not configured, please go to the settings page to configure it</string>
    <string name="act_live_play_empty_channel">The channel list is empty</string>
    <string name="act_live_play_network_error">The network request for the live-streaming address failed</string>
    <string name="act_search">Search</string>
    <string name="act_search_clr">Clear</string>
    <string name="act_search_del">Backspace</string>
    <string name="act_search_rem">Remote</string>
    <string name="act_search_trend">Trending</string>
    <string name="act_search_txt">Enter Search Title</string>
    <string name="act_settings">Settings</string>
    <string name="act_home">Home</string>
    <string name="act_live">Live</string>
    <string name="act_player">Player</string>
    <string name="act_system">System</string>
    <string name="search_input">Input cannot be blank</string>
    <string name="search_site">No source site selected</string>
    <string name="search_checkAll">Select All</string>
    <string name="search_clearAll">Select None</string>
    <string name="fs_show_all">All</string>
    <string name="fs_results">Search Results</string>
    <string name="global_search">global search</string>
    <string name="search">search</string>
    <string name="Select_source">Select source</string>
    <string name="vod_audio">Select Audio Track</string>
    <string name="vod_no_audio">No Audio Track</string>
    <string name="vod_sub_option">Subtitle Options</string>
    <string name="vod_sub_sel">Select Subtitle</string>
    <string name="vod_sub_na">No Internal Subtitle</string>
    <string name="vod_sub_int">Internal</string>
    <string name="vod_sub_ext">External</string>
    <string name="vod_sub_remote">Search</string>
    <string name="vod_sub_size">Size</string>
    <string name="vod_sub_delay">Delay</string>
    <string name="vod_sub_search">Search</string>
    <string name="vod_sub_off">Subtitle Off</string>
    <string name="vod_sub_on">Subtitle On</string>
    <string name="vod_remaining_time">Remaining Time</string>
    <string name="vod_ends_at">Ends at</string>
    <string name="exo_track_selection_title_video">Video</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_selection_title_text">Text</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_unknown">Unknown</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_mono">Mono</string>
    <string name="exo_track_stereo">Stereo</string>
    <string name="exo_track_surround">Surround Sound</string>
    <string name="exo_track_surround_5_point_1">5.1 Surround Sound</string>
    <string name="exo_track_surround_7_point_1">7.1 Surround Sound</string>
    <string name="exo_track_role_alternate">Alternate</string>
    <string name="exo_track_role_supplementary">Supplementary</string>
    <string name="exo_track_role_commentary">Commentary</string>
    <string name="exo_track_role_closed_captions">CC</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_item_list">%1$s，%2$s</string>
    <string name="sub_size">Size</string>
    <string name="sub_delay">Delay</string>
    <string name="sub_style">Style</string>
    <string name="sub_style_text">ABC.</string>
    <string name="toolbar_navigation_close_description">Close demo</string>
    <string-array name="doh_name">
        <item>System</item>
        <item>Tencent</item>
        <item>Alibaba</item>
        <item>360</item>
    </string-array>
    <string-array name="doh_url">
        <item />
        <item>https://doh.pub/dns-query</item>
        <item>https://dns.alidns.com/dns-query</item>
        <item>https://doh.360.cn/dns-query</item>
    </string-array>
    <string-array name="media_title_tag">
        <item>General</item>
        <item>ExoPlayer</item>
        <item>IjkPlayer</item>
    </string-array>
</resources>