<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.github.tvbox.osc.ui.fragment.HomeFragment"
        android:label="@string/act_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.github.tvbox.osc.ui.fragment.SearchFragment"
        android:label="@string/act_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_live"
        android:name="com.github.tvbox.osc.ui.fragment.LiveFragment"
        android:label="@string/act_live"
        tools:layout="@layout/fragment_live" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.github.tvbox.osc.ui.fragment.SettingFragment"
        android:label="@string/act_settings"
        tools:layout="@layout/fragment_setting" />

</navigation>