<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_drawer_2"
    android:layout_width="match_parent"
    android:layout_height="240dp">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textStyle="bold"
        android:id="@+id/sheet_files_storage_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bottom_storage_type"
        android:textAlignment="center"
        android:layout_below="@id/drag_handle"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/webdav_button"
        android:textStyle="bold"
        android:paddingTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sheet_files_storage_title"
        android:layout_centerHorizontal="true"
        android:text="@string/bottom_webdav"/>

    <Button
        android:id="@+id/alist_button"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/webdav_button"
        android:layout_centerHorizontal="true"
        android:text="@string/bottom_alist"/>

    <Button
        android:id="@+id/local_button"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/alist_button"
        android:layout_centerHorizontal="true"
        android:text="@string/bottom_local"/>

</RelativeLayout>