<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingLeft="4dp"
    android:paddingTop="10dp"
    android:paddingRight="4dp"
    android:paddingBottom="20dp">

    <LinearLayout
        android:id="@+id/tvUserHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/tvLive"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/shape_user_home"
            android:clickable="false"
            android:focusable="true"
            android:minWidth="100dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/hm_live"
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:alpha="0.9"
                app:srcCompat="@drawable/hm_live" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/hm_live"
                android:textColor="@color/color_FFFFFF_90"
                android:textSize="16dp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tvSearch"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/shape_user_home"
            android:clickable="false"
            android:focusable="true"
            android:minWidth="100dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/hm_search"
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:alpha="0.9"
                app:srcCompat="@drawable/hm_search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/hm_search"
                android:textColor="@color/color_FFFFFF_90"
                android:textSize="16dp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tvFavorite"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/shape_user_home"
            android:clickable="false"
            android:focusable="true"
            android:minWidth="100dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/hm_fav"
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:alpha="0.9"
                app:srcCompat="@drawable/hm_fav" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/hm_fav"
                android:textColor="@color/color_FFFFFF_90"
                android:textSize="16dp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tvDrive"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/shape_user_home"
            android:clickable="false"
            android:focusable="true"
            android:minWidth="100dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/hm_drive"
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:alpha="0.9"
                app:srcCompat="@drawable/hm_folder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/hm_file"
                android:textColor="@color/color_FFFFFF_90"
                android:textSize="24dp"
                android:textStyle="normal" />

        </LinearLayout>

    </LinearLayout>

    <com.owen.tvrecyclerview.widget.TvRecyclerView
        android:id="@+id/tvHotListForGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserHome"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:descendantFocusability="afterDescendants"
        android:paddingLeft="@dimen/vs_5"
        android:paddingTop="@dimen/vs_30"
        android:paddingRight="@dimen/vs_5"
        android:paddingBottom="@dimen/vs_10"
        android:tag="tvHotListForGrid"
        android:visibility="gone"
        app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
        app:tv_layoutManager="V7GridLayoutManager"
        app:tv_selectedItemIsCentered="true"
        app:tv_verticalSpacingWithMargins="@dimen/vs_15" />

    <com.owen.tvrecyclerview.widget.TvRecyclerView
        android:id="@+id/tvHotListForLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/vs_440"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/vs_0"
        android:paddingTop="@dimen/vs_30"
        android:paddingRight="@dimen/vs_0"
        android:paddingBottom="@dimen/vs_10"
        android:tag="tvHotListForLine"
        app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
        app:tv_layoutManager="V7LinearLayoutManager"
        app:tv_selectedItemIsCentered="true"
        app:tv_verticalSpacingWithMargins="@dimen/vs_10" />

</LinearLayout>